--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,15 @@
     <string name="app_name">Measurelet</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="profilnavn">Jens Petersen</string>
+    <string name="profilemail">JP@gmail.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="dagligt">Dagligt overblik</string>
+    <string name="ugentlig">Ugentligt overblik</string>
+    <string name="profil">Profil</string>
+    <string name="indstillinger">Indstillinger</string>
+    <string name="registrer">Væskeregistrering</string>
+
+
 </resources>
