--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="indstillinger">Indstillinger</string>
     <string name="registrer">Væskeregistrering</string>
     <string name="indtag"><u>Vælg den indtaget væske</u></string>
-
-
+    <string name="drink">Hvad har du drukket?</string>
+    <string name="amount">Mængde</string>
+    <string name="kaffeml">Kaffe\n125ml</string>
 </resources>
