--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="quick_add_text">Hurtig tilføjelse</string>
     <string name="dagligt">Dagligt overblik</string>
     <string name="ugentlig">Ugentligt overblik</string>
-    <string name="profil">Profil</string>
+    <string name="profil">Opdater profil</string>
     <string name="indstillinger">Indstillinger</string>
     <string name="registrer">Væskeregistrering</string>
     <string name="choose"><u>Vælg væske</u></string>
